--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
     --color-yellow: #fff7d1;
     --color-orange: #feb546;
     --color-black: #000000;
-  
+    --color-navy: #0c1c75;
+    --color-dark-navy: #000837;
+    
     /* Font size */
     --font-large: 48px;
     --font-medium: 28px;
@@ -28,6 +30,7 @@
     --weight-regular: 400;
 
     /* Size */
+    --size-border-radius: 4px;
   }
   
   /* Universal tags */
@@ -35,6 +38,21 @@
     box-sizing: border-box;
   }
 
+  body{
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    cursor: default;
+  }
+
+  a{
+    text-decoration: none;
+    color: var(--color-white);
+  }
+
+  ul{
+    list-style: none;
+    padding-left: 0;
+  }
   /* Typography */
   h1 {
     font-size: var(--font-large);
@@ -62,4 +80,47 @@
     font-weight: var(--weight-regular);
     color: var(--color-black);
     margin: 4px 0;
+  }
+
+  /* Navbar */
+  #navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-dark-navy); 
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+    position: sticky;
+    top:0
+  }
+
+  .navbar__menu {
+    display: flex;
+  }
+
+  .navbar__logo {
+    display: flex;
+    align-items: center;
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+  }
+
+  .navbar__logo__imgs {
+    width: 50px;
+    margin-right: 10px;
+  }
+
+  .navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    border-radius: var(--size-border-radius);
+  }
+
+  .navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+  }
+
+  .navbar__menu__item:hover {
+    background-color: var(--color-navy);
+    transition: 0.5s;
   }
