--- a/style.css
+++ b/style.css
@@ -50,9 +50,20 @@
   }
 
   ul{
-    list-style: none;
     padding-left: 0;
   }
+
+  li {
+    list-style: none;
+  }
+
+  button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
+  }
+
   /* Typography */
   h1 {
     font-size: var(--font-large);
@@ -123,4 +134,32 @@
   .navbar__menu__item:hover {
     background-color: var(--color-navy);
     transition: 0.5s;
+  }
+
+  /* Home */
+  #home {
+    background: url('imgs/bg.png') center/cover no-repeat;
+    padding: 40px;
+    text-align: center;
+  }
+
+  .home__avatar {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    border: 2px solid var(--color-light-white);
+  }
+
+  .home__title,.home__description {
+    color: var(--color-white);
+  }
+
+  .home__contact {
+    color: var(--color-white);
+    font-size: var(--font-regular);
+    font-weight: var(--weight-bold);
+    margin: 24px;
+    padding: 8px 12px;
+    border: 2px solid var(--color-white);
+    border-radius: 4px;
   }
