--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@
 
     /* Size */
     --size-border-radius: 4px;
+
+    /* Animation */
+    --animation-duration: 300ms;
   }
   
   /* Universal tags */
@@ -38,18 +41,18 @@
     box-sizing: border-box;
   }
 
-  body{
+  body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     cursor: default;
   }
 
-  a{
+  a {
     text-decoration: none;
     color: var(--color-white);
   }
 
-  ul{
+  ul {
     padding-left: 0;
   }
 
@@ -133,7 +136,7 @@
 
   .navbar__menu__item:hover {
     background-color: var(--color-navy);
-    transition: 0.5s;
+    transition: all var(--animation-duration) ease;
   }
 
   /* Home */
@@ -150,7 +153,7 @@
     border: 2px solid var(--color-light-white);
   }
 
-  .home__title,.home__description {
+  .home__title, .home__description {
     color: var(--color-white);
   }
 
@@ -162,4 +165,79 @@
     padding: 8px 12px;
     border: 2px solid var(--color-white);
     border-radius: 4px;
+  }
+
+  /* Section common */
+  .section {
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+  }
+
+  /* About */
+  .about__majors {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0;
+  }
+
+  .major__icon {
+    width: 170px;
+    height: 170px;
+    line-height: 170px;
+    font-size: 70px;
+    margin: auto;
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin-bottom: 16px;
+  }
+
+  .major__icon i {
+    transition: all var(--animation-duration) ease;
+  }
+
+  .major__icon:hover i {
+    color: var(--color-navy);
+    transform: scale(1.2);
+  }
+
+  .major__title, .major__description {
+    color: var(--color-dark-grey);
+  }
+
+  .major__title {
+    font-size: var(--font-regular);
+  }
+
+  .major__description {
+    margin: 8px;
+    font-size: var(--font-small);
+  }
+
+  .school, .academy {
+    display: flex;
+    align-items: center;
+  }
+
+  .school__description, .academy__description {
+    margin: 0 16px;
+    text-align: left;
+  }
+
+  .school__name, .school__period, .academy__name, .academy__period {
+    color: var(--color-light-grey);
+  }
+
+  .school__name, .academy__name {
+    font-size: var(--font-small);
+  }
+
+  .school__period, .academy__period {
+    font-size: var(--font-micro);
+  }
+
+  .school__logo, .academy__logo {
+    width: 100px;
   }
