--- a/style.css
+++ b/style.css
@@ -105,7 +105,8 @@
     color: var(--color-white);
     padding: 16px;
     position: sticky;
-    top:0
+    top:0;
+    z-index: 99;
   }
 
   .navbar__menu {
@@ -395,4 +396,46 @@
     margin-left: -12px;
     margin-top: 8px;
     background-color: var(--color-dark-white);
+  }
+
+  /* Testimonial */
+  #testimonials {
+    background-color: var(--color-light-white);
+  }
+
+  .testimonials {
+    margin: 40px;
+  }
+
+  .testimonial {
+    display: flex;
+    margin: 32px 0;
+  }
+
+  .testimonial__avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+  }
+
+  .testimonial__avatar:nth-child(odd) {
+    margin-right: 40px;
+  }
+  
+  .testimonial__avatar:nth-child(even) {
+    margin-left: 40px;
+  }
+
+  .testimonial__speech-bubble {
+    padding: 18px;
+    background-color: var(--color-white);
+    border-radius: var(--size-border-radius);
+  }
+
+  .testimonial__speech-bubble p {
+    color: var(--color-light-grey);
+  }
+
+  .testimonial__speech-bubble a {
+    color: var(--color-dark-pink);
   }
