--- a/style.css
+++ b/style.css
@@ -439,3 +439,31 @@
   .testimonial__speech-bubble a {
     color: var(--color-dark-pink);
   }
+
+  /* Contact */
+
+#contact {
+  background-color: var(--color-dark-navy);
+}
+
+.contact__title, .contact__email, .contact__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.conatact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+
+.conatact__links i {
+  transition: all var(--animation-duration) ease;
+}
+
+.conatact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-blue);
+}
