--- a/style.css
+++ b/style.css
@@ -140,6 +140,15 @@
     transition: all var(--animation-duration) ease;
   }
 
+  .navbar__toggle-btn {
+    position: absolute;
+    top: 26px;
+    right: 32px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+  }
+
   /* Home */
   #home {
     background: url('imgs/bg.png') center/cover no-repeat;
@@ -441,29 +450,68 @@
   }
 
   /* Contact */
+  #contact {
+    background-color: var(--color-dark-navy);
+  }
 
-#contact {
-  background-color: var(--color-dark-navy);
-}
+  .contact__title, .contact__email, .contact__rights {
+    color: var(--color-white);
+  }
 
-.contact__title, .contact__email, .contact__rights {
-  color: var(--color-white);
-}
+  .contact__title {
+    margin: 32px 0;
+  }
 
-.contact__title {
-  margin: 32px 0;
-}
+  .conatact__links {
+    font-size: var(--font-large);
+    margin: 24px 0;
+  }
 
-.conatact__links {
-  font-size: var(--font-large);
-  margin: 24px 0;
-}
+  .conatact__links i {
+    transition: all var(--animation-duration) ease;
+  }
 
-.conatact__links i {
-  transition: all var(--animation-duration) ease;
-}
+  .conatact__links i:hover {
+    transform: scale(1.1);
+    color: var(--color-blue);
+  }
 
-.conatact__links i:hover {
-  transform: scale(1.1);
-  color: var(--color-blue);
-}
+  /* For below 768px screen width */
+  @media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+      display: block;
+    }
+
+    #navbar {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .navbar__menu {
+      flex-direction: column;
+      text-align: center;
+      width: 100%;
+      display: none;
+    }
+
+    .about__majors {
+      flex-direction: column;
+    }
+
+    .major {
+      margin-bottom: 38px;
+    }
+
+    .skillset {
+      flex-direction: column;
+    }
+
+    .project {
+      flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+      width: 80px;
+      height: 80px;
+    }
+  }
