--- a/style.css
+++ b/style.css
@@ -99,14 +99,21 @@
   /* Navbar */
   #navbar {
     display: flex;
+    width: 100%;
     justify-content: space-between;
-    background-color: var(--color-dark-navy); 
+    background-color: transparent; 
     align-items: center;
     color: var(--color-white);
     padding: 16px;
-    position: sticky;
+    position: fixed;
     top:0;
     z-index: 99;
+    transition: all var(--animation-duration) ease-in-out;
+  }
+
+  #navbar.navbar--dark {
+    background-color: var(--color-dark-navy);
+    padding: 8px;
   }
 
   .navbar__menu {
@@ -153,6 +160,7 @@
   #home {
     background: url('imgs/bg.png') center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
   }
 
