--- a/style.css
+++ b/style.css
@@ -136,13 +136,12 @@
     padding: 8px 12px;
     margin: 0 4px;
     border-radius: var(--size-border-radius);
+    border: 1px solid transparent;
   }
 
-  .navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-  }
 
   .navbar__menu__item:hover {
+    border: 1px solid var(--color-white);
     background-color: var(--color-navy);
     transition: all var(--animation-duration) ease;
   }
@@ -332,12 +331,12 @@
     padding: 8px 48px;
   }
 
-  .category__btn.active, .category__btn:hover {
+  .category__btn.selected, .category__btn:hover {
     background-color: var(--color-blue);
     color: var(--color-white);
   }
 
-  .category__btn.active .category__count, .category__btn:hover .category__count {
+  .category__btn.selected .category__count, .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
   }
