--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@
 
   .navbar__toggle-btn {
     position: absolute;
-    top: 22px;
+    top: 28px;
     right: 32px;
     font-size: 24px;
     color: var(--color-white);
@@ -389,6 +389,7 @@
     max-height: 100%;
   }
 
+
   .project__description {
     position: absolute;
     background-color: var(--color-black);
@@ -410,7 +411,7 @@
   }
 
   .project__description h3 {
-    color: var(--color-white);
+    color: var(--color-orange);
   }
 
   .project__description h3:after {
@@ -418,9 +419,9 @@
     display: block;
     position: relative;
     left: 50%;
-    width: 25px;
+    width: 50px;
     height: 2px;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
     background-color: var(--color-dark-white);
   }
@@ -525,6 +526,11 @@
     #navbar {
       flex-direction: column;
       align-items: flex-start;
+      background-color: var(--color-dark-navy);
+    }
+
+    #navbar.navbar--dark {
+      padding: 16px;
     }
 
     .navbar__menu {
@@ -532,6 +538,10 @@
       text-align: center;
       width: 100%;
       display: none;
+    }
+
+    .navbar__menu.open {
+      display: block;
     }
 
     .about__majors {
