CSS: Font size update

--- a/style.css
+++ b/style.css
@@ -519,6 +519,34 @@
 
   /* For below 768px screen width */
   @media screen and (max-width: 768px) {
+    h1 {
+      font-size: 36px;
+      font-weight: var(--weight-bold);
+      color: var(--color-black);
+      margin: 16px 0px;
+    }
+    
+    h2 {
+      font-size: var(--font-regular);
+      font-weight: var(--weight-semi-bold);
+      color: var(--color-black);
+      margin: 8px 0;
+    }
+    
+    h3 {
+      font-size: var(--font-small);
+      font-weight: var(--weight-regular);
+      color: var(--color-black);
+      margin: 8px 0;
+    }
+
+    p {
+      font-size: var(--font-small);
+      font-weight: var(--weight-regular);
+      color: var(--color-black);
+      margin: 4px 0;
+    }
+
     .navbar__toggle-btn {
       display: block;
     }
